tests/ui/wait-for-count-false.goml
// This test ensures that the `wait-for-count` command is behaving like expected.
go-to: "file://" + |CURRENT_DIR| + "/" + |DOC_PATH| + "/elements.html"
set-timeout: 500
// Shouldn't wait here since it's already not the case.
wait-for-count-false: ("#js-create-elem", 2)
click: "#js-create-elem"
// Should wait for 250ms here.
wait-for-count-false: (".random-class", 1)
wait-for-count-false: (".random-class", 2)
//~^ ERROR: There are still 2 instances of ".random-class"
// Check that the script won't stop running anything after the previous command failed.
assert-count: ("//*[@class='random-class']", 3)
